build: master to 4.0.0-SNAPSHOT (#398)